# belikai

./: .gitignore  pyproject.toml
agent/: pyproject.toml
agent/src/agent/: test_gemini.py
dsl/: README.md  pyproject.toml
dsl/src/dsl/: parser.py
dsl/tests/: test_parser.py
lsp/: main.py  pyproject.toml
