[project]
name = "belikai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.3",
    "dsl",
    "agent",
    "lsp",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "dsl",
    "lsp",
    "agent",
]

[tool.uv.sources]
dsl = {workspace = true}
lsp = {workspace = true}
agent = {workspace = true}


[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["dsl", "lsp"]
